New Section: Assine o combo+

--- a/styles/containerSecundario.css
+++ b/styles/containerSecundario.css
@@ -26,3 +26,12 @@
 .descricao__texto{
     color: var(--cinza-secundario);
 }
+
+.secundario__botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.containet__descricao{
+    padding: 2em;
+}
