--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,8 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
+    --botao-azul-efeito: #3c92fa;
+    --cor-de-fundo: #00030C;
 
     --fonte-principal: 'inter';
 }
@@ -28,6 +30,11 @@
     display: block;
     text-decoration: none;
     margin-bottom: 1em;
+}
+
+.container__botao:hover{
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
 
 .botao_secundario{
